<resources>

    <string name="app_name">Snapendar</string>
    <string name="menu_settings">Settings</string>
    <string name="loadimage_button_title">Load</string>
    <string name="captureimage_button_title">Capture</string>
    <string name="events_button_title">Events</string>
    <string name="help_button_title">"?"</string>
    <string name="snap_button_title">Snap</string>
    <string name="back_button_title">Back</string>
    <string name="ocrresult_title">Your Parsed Text: </string>
    <string name="helptext">Snap(below) or Load(above) an image to put an event in your calendar</string>
    
    <!-- Brought in from HawaiiSampleAppBase --> 
    <string name="hawaii_ADM_client_ID"></string>
    <string name="hawaii_ADM_client_secret"></string>
    <string name="hawaii_ADM_service_scope">http://api.hawaii-services.net/</string>
    <string name="hawaii_authentication_type">ADM</string>
    <string name="error_missing_authentication_type">missing authentication type</string>
    <string name="error_missing_authentication_value">Hawaii credential is missing. Please consult the "Hawaii Installation Guide" on how to obtain credentials.</string>
    <string name="configuration_error_title">Error</string>
    <string name="error_missing_key_field">missing key field</string>
    <string name="error_missing_network_connection">missing network connection</string>
    <string name="hawaii_GUID_app_ID">f03cc095-df73-4f78-b77c-8cbde17e6d2c</string>

</resources>