<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:measureWithLargestChild="true"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/ButtonBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        android:gravity="center_horizontal"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/BackBtn"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back_button_title"
            android:visibility="gone" />
        
        <Button
            android:id="@+id/LoadBtn"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loadimage_button_title" />

        <Button
            android:id="@+id/SavedSnapsBtn"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/events_button_title" />

        <Button
            android:id="@+id/HelpButton"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="29dp"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:text="@string/help_button_title" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ocr_result_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="gone" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ocrresult_title" />

        <TextView
            android:id="@+id/ocrResult_textview"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_weight="2"
            android:textIsSelectable="true" />
    </LinearLayout>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_gravity="center_horizontal"
        android:contentDescription="Selected Image"
        android:visibility="gone" />

    <FrameLayout
        android:id="@+id/preview"
        android:layout_width="320dp"
        android:layout_height="240dp"
        android:layout_gravity="center_horizontal">
        <!-- android:layout_weight=".46" > --><!-- This line tears shit up on Galaxy S3 -->

        <SurfaceView
            android:id="@+id/surfaceView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </FrameLayout>

    <ProgressBar
        android:id="@+id/ocr_progressbar"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="64dp"
        android:layout_gravity="center"
        android:gravity="center_vertical|center_horizontal"
        android:visibility="gone" />

    <Button
        android:id="@+id/SnapItBtn"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@android:color/black"
        android:text="@string/snap_button_title"
        android:textColor="@android:color/white" />

</LinearLayout>